# jax-streams

./: README.md  pyproject.toml
notebooks/: 001-test-jax-array.ipynb  002-flax-getting-started.ipynb  004-parallelism-with-flax.ipynb
